--- a/index.html
+++ b/index.html
@@ -173,6 +173,21 @@ function t() {
  
 </script> 
 <div id="console"></div> 
+<div class="terminal-window">
+  <header>
+    <div class="button green"></div>
+    <div class="button yellow"></div>
+    <div class="button red"></div>
+  </header>
+  <section class="terminal">
+    
+    <p> hello world</p>
+    
+  </section>
+</div>
+ 
+</div>
+
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
