--- a/index.html
+++ b/index.html
@@ -80,37 +80,15 @@ THE SOFTWARE.
   overflow: auto;
 }
 
-.terminal-window section.terminal .typed-cursor {
-    opacity: 1;
-    -webkit-animation: blink 0.7s infinite;
-    -moz-animation: blink 0.7s infinite;
-    animation: blink 0.7s infinite;
-}
-@keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-@-webkit-keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-@-moz-keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-
 .terminal-data { display: none; }
 .terminal-window .gray { color: gray; }
 .terminal-window .green { color: green;}
   #console {
     color: #fff;
     width:750px;
-    margin-left:auto;
+    /*margin-left:auto;
     margin-right:auto;
-    margin-top:100px;
+    margin-top:100px;*/
   }
   a {
     color: #0bc;
