--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@ THE SOFTWARE.
 <title>Jeff Weisbein</title> 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
 <style type="text/css"> 
+
+.main{
+  padding-top: 50px;
+}
   body {
-  background: #6D7074;
+  background: #59ABE3;
 }
 
 
@@ -232,9 +236,11 @@ function t() {
     <div class="button yellow"></div>
     <div class="button red"></div>
   </header>
+  <div class="main">
   <section class="terminal">
     <div id="console"></div> 
   </section>
+  </div>
 </div>
  
 </div>
