--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ function t() {
 </div>
 </div>
 
-<h1><a href="#highlights">>> Highlights</a></h1>
+<h1>>> Highlights</h1>
 <div class="highlights">
 <div class="media">
   <div class="media-left media-middle">
