--- a/index.html
+++ b/index.html
@@ -173,16 +173,16 @@ ul.dropdown-menu {
 </head> 
 <body> 
 <script type="text/javascript"> 
-/*
+
     $(window).scroll(function() {
-    if($(this).scrollTop() > 50) 
+    if($(this).scrollTop() > 50)  /*height in pixels when the navbar becomes non opaque*/ 
     {
         $('.opaque-navbar').addClass('opaque');
     } else {
         $('.opaque-navbar').removeClass('opaque');
     }
 });
-*/
+
 
   var Typer={
   text: null,
