--- a/index.html
+++ b/index.html
@@ -338,7 +338,6 @@ function t() {
 </div>
 </div>
 
-<h1>>> Highlights</h1>
 <div class="highlights">
 <div class="media">
   <div class="media-left media-middle">
@@ -360,35 +359,7 @@ function t() {
     </a>
   </div>
   <div class="media-body">
-    <h3 class="media-heading">Math 88S: Mathematics & Movies</h3>
-    <h4>Spring 2016</h4>
-    <p>This past quarter, I had the pleasure to teach my own course at UCLA. I wanted to teach students that math has so many possibilities, and that the subject doesn't have to be mired in complex computations. I created and taught a course that combined 10 topics from movies with 10 mathematical comcepts. Truly an amazing, unique expereince.</p>
-  </div>
-</div>
-
-<div class="media">
-  <div class="media-left media-middle">
-    <a href="#">
-      <img class="media-object" data-src="..." alt="Generic placeholder image">
-    </a>
-  </div>
-  <div class="media-body">
-    <h3 class="media-heading">Research in Bodgan Lab</h3>
-    <h4>Spring 2016</h4>
-    <p>I recently joined a bioinformatics lab that focuses on population genetics. I got to create a command-line based data visualization tool that plots the relationships between SNPs. This tool is utilized in a paper we recently submitted to the Bioinformatics Journal. </p>
-  </div>
-</div>
-
-<h3>>>Learn about the rest of my Work</h3>
-
-<div class="media">
-  <div class="media-left media-middle">
-    <a href="#">
-      <img class="media-object" data-src="..." alt="Generic placeholder image">
-    </a>
-  </div>
-  <div class="media-body">
-    <h3 class="media-heading">Alexa M.D.</h3>
+    <h4 class="media-heading">Middle aligned media</h4>
     <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
     <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
   </div>
@@ -401,7 +372,35 @@ function t() {
     </a>
   </div>
   <div class="media-body">
-    <h3 class="media-heading">IDEA Hacks</h3>
+    <h4 class="media-heading">Middle aligned media</h4>
+    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+    <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+  </div>
+</div>
+
+<h3>>>Learn about the rest of my Work</h3>
+
+<div class="media">
+  <div class="media-left media-middle">
+    <a href="#">
+      <img class="media-object" data-src="..." alt="Generic placeholder image">
+    </a>
+  </div>
+  <div class="media-body">
+    <h4 class="media-heading">Middle aligned media</h4>
+    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+    <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-left media-middle">
+    <a href="#">
+      <img class="media-object" data-src="..." alt="Generic placeholder image">
+    </a>
+  </div>
+  <div class="media-body">
+    <h4 class="media-heading">Middle aligned media</h4>
     <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
     <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
   </div>
@@ -416,7 +415,7 @@ function t() {
     </a>
   </div>
   <div class="media-body">
-    <h3 class="media-heading">Fruthie Codes Tutorials</h3>
+    <h4 class="media-heading">Middle aligned media</h4>
     <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
     <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
   </div>
