fixing bugs still

--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@ function t() {
 </div>
 </div>
 
+<h1><a href="index.html#highlights">>> Highlights</a></h1>
 <div class="highlights">
 <div class="media">
   <div class="media-left media-middle">
@@ -419,8 +420,8 @@ function t() {
     <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
     <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
   </div>
-</div>
-<h2> >> Read the rest of my Thoughts</h2>
+</div> 
+<h2> >> Read the rest of my Thoughts   </h2>
 </div>
 
 <script type="text/javascript">
