testing w/out nabber

--- a/index.html
+++ b/index.html
@@ -173,15 +173,16 @@ ul.dropdown-menu {
 </head> 
 <body> 
 <script type="text/javascript"> 
-
+/*
     $(window).scroll(function() {
-    if($(this).scrollTop() > 50)  /*height in pixels when the navbar becomes non opaque*/ 
+    if($(this).scrollTop() > 50)  
     {
         $('.opaque-navbar').addClass('opaque');
     } else {
         $('.opaque-navbar').removeClass('opaque');
     }
 });
+*/
 
 
   var Typer={
@@ -303,7 +304,7 @@ function t() {
  
 </script> 
 
-<div class="navbar navbar-inverse navbar-fixed-top opaque-navbar">
+<!--<div class="navbar navbar-inverse navbar-fixed-top opaque-navbar">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navMain">
@@ -321,7 +322,7 @@ function t() {
       </ul>
     </div>
   </div>
-</div>
+</div>-->
 
 <h2> Welcome! </h2>
 
