--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@ function t() {
 </div>
 </div>
 
+<!--
 <h1><a href="index.html#highlights">>> Highlights</a></h1>
 <div class="highlights">
 <div class="media">
@@ -423,7 +424,7 @@ function t() {
   </div>
 </div> 
 <h2> >> Read the rest of my Thoughts   </h2>
-</div>
+</div> -->
 
 <script type="text/javascript">
 
