--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ function t() {
 <div class="media">
   <div class="media-left media-middle">
     <a href="#">
-      <img class="media-object" src="http://www.photonics.ucla.edu/image/news/sandia.jpg" alt="Generic placeholder image">
+      <img class="media-object" data-src="..." alt="Generic placeholder image">
     </a>
   </div>
   <div class="media-body">
