--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@ body p{
   height: 225px;
   width: 325px;
   padding-right: 35px;
-  border-radius: 5%;
   padding-top: 10px;
   padding-bottom: 10px;
 
@@ -402,7 +401,7 @@ function t() {
 <div class="media">
   <div class="media-left media-middle">
     <a href="#">
-      <img class="media-object" src="http://www.photonics.ucla.edu/image/news/sandia.jpg" alt="Generic placeholder image">
+      <img class="media-object" src="img/sandia.jpg" alt="Generic placeholder image">
     </a>
   </div>
   <div class="media-body">
@@ -450,8 +449,8 @@ function t() {
   </div>
   <div class="media-body">
     <h3 class="media-heading">Alexa M.D.</h3>
-    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-    <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <h4>February 2016</h4>
+    <p>My last hackathon I attended was Tree Hacks. My team and I built Alexa M.D., an at-home doctor technology that uses the Amazon echo, Oculus Rift, and an automated pill dispensing machine. We won best use of Amazon Echo and best Medical Wearable hack!</p>
   </div>
 </div>
 
@@ -462,9 +461,9 @@ function t() {
     </a>
   </div>
   <div class="media-body">
-    <h3 class="media-heading">IDEA Hacks</h3>
-    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-    <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <h3 class="media-heading">RoboHome</h3>
+    <h4>January 2016</h4>
+    <p>I attended IDEA Hacks, UCLA's hardware hackathon. The theme was IoT, so we decided to do the ultimate IoT home--just on a smaller scale. Our model home was controlled using an Android App, website, and Myo. Best yet, we had 3D printed Pikachu to live inside it.</p>
   </div>
 </div>
 
@@ -475,13 +474,12 @@ function t() {
 <div class="media">
   <div class="media-left media-middle">
     <a href="#">
-      <img class="media-object" src="https://d262ilb51hltx0.cloudfront.net/max/1200/1*SQxEg9HfjesZnm2t8EXohw.png" alt="Generic placeholder image">
+      <img class="media-object" src="img/fruthie_codes.png" alt="Generic placeholder image">
     </a>
   </div>
   <div class="media-body">
     <h3 class="media-heading">Fruthie Codes Tutorials</h3>
-    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-    <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <p>Coding defintely has a steep learning curve, and there are so many details that often go overlooked when explaining it. Together, Frank and I are creating a 10 tutorials over the summer to encourage people to start coding. Our hope is that our tutorials cover the big topics as well as the nitty gritty details.</p>
   </div>
 </div>
 <h3 id="sub_heading"><span class="glyphicon glyphicon-menu-right" style="color:#5BBCC9;"></span> 
