--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ function t() {
 <div class="panel2">
 <div class="highlights">
 <h1 id="highlights">
-<span class="glyphicon glyphicon-menu-left" style="color:#092930;"></span>Highlights<span class="glyphicon glyphicon-menu-right" style="color:#092930;"></span></h1>
+<span class="glyphicon glyphicon-menu-left" style="color:#092930;"></span><a href="#Highlights">Highlights</a><span class="glyphicon glyphicon-menu-right" style="color:#092930;"></span></h1>
 <div class="media">
   <div class="media-left media-middle">
     <a href="#">
