--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body p{
   text-align: center;
 }
 #sub_heading{
-  color: #5BBCC9;
+  color: #6C7A89;
   padding-bottom: 50px;
 }
 .highlights img{
@@ -90,7 +90,7 @@ body p{
 }
 
 .highlights p{
-  font-size: 17px;
+  font-size: 19px;
 }
 
 .highlights h3{
@@ -404,15 +404,15 @@ function t() {
   </header>
   <section class="terminal">
     <div id="console"></div> 
+    <h1><a href="index.html#highlights">go to highlights</a></h1>
   </section>
-    <h1><a href=#Highlights>Highlights</a></h1>
 </div>
 </div>
 
 <div class="panel2">
 <div class="highlights">
 <h1 id="highlights">
-<span class="glyphicon glyphicon-menu-left" style="color:#092930;"></span><a href="#Highlights">Highlights</a><span class="glyphicon glyphicon-menu-right" style="color:#092930;"></span></h1>
+<span class="glyphicon glyphicon-menu-left" style="color:#092930;"></span><a id="highlights">Highlights</a><span class="glyphicon glyphicon-menu-right" style="color:#092930;"></span></h1>
 <div class="media">
   <div class="media-left media-top">
     <a href="#">
@@ -451,10 +451,7 @@ function t() {
     <p>I recently joined a bioinformatics lab that focuses on population genetics. I got to create a command-line based data visualization tool that plots the relationships between SNPs. This tool is utilized in a paper we recently submitted to the Bioinformatics Journal. </p>
   </div>
 </div>
-
-<h3 id="sub_heading"><span class="glyphicon glyphicon-menu-right" style="color:#5BBCC9;"></span> 
-    <span class="glyphicon glyphicon-menu-right" style="color:#5BBCC9;"></span>
-    Learn about the rest of my Work</h3>
+<h3 id="sub_heading"><img src="img/arrow.png">Learn about the rest of my Work</h3>
 
 <div class="media">
   <div class="media-left media-top">
@@ -482,9 +479,7 @@ function t() {
   </div>
 </div>
 
-<h3 id="sub_heading"><span class="glyphicon glyphicon-menu-right" style="color:#5BBCC9;"></span> 
-    <span class="glyphicon glyphicon-menu-right" style="color:#5BBCC9;"></span>
-    See the rest of my Projects</h3>
+<h3 id="sub_heading"><img src="img/arrow.png">See the rest of my Projects</h3>
 
 <div class="media">
   <div class="media-left media-top">
@@ -497,9 +492,7 @@ function t() {
     <p>Coding defintely has a steep learning curve, and there are so many details that often go overlooked when explaining it. Together, Frank and I are creating a 10 tutorials over the summer to encourage people to start coding. Our hope is that our tutorials cover the big topics as well as the nitty gritty details.</p>
   </div>
 </div>
-<h3 id="sub_heading"><span class="glyphicon glyphicon-menu-right" style="color:#5BBCC9;"></span> 
-    <span class="glyphicon glyphicon-menu-right" style="color:#5BBCC9;"></span>
-    Read the rest of my Thoughts</h3>
+<h3 id="sub_heading"><img src="img/arrow.png">Read the rest of my Thoughts</h3>
 </div>
 
 <footer>
