--- a/code.html
+++ b/code.html
@@ -17,7 +17,30 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Ruth Dolly</a>
+    </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="work.html">Work</a></li>
+        <li><a href="code.html">Code</a></li>
+        <li><a href="#">Thoughts</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
     <div class="wrapper">
   <div class="header">
     <h1 class="header__title">
@@ -203,6 +226,18 @@
 
   </div>
 </div>
+<footer>
+  <div>
+  <h3 id="thank_you"> Thanks for stopping by!</h3>
+  <div class="icons">
+    <img src="img/github.png">
+    <img src="img/email.png">
+    <img src="img/twitter.png">
+    <img src="img/linkedin.png">
+    <img src="img/pencil.png">
+  </div>
+  </div>
+</footer>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 
         <script src="js/index.js"></script>
@@ -211,4 +246,5 @@
     
     
   </body>
+
 </html>
