--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@ function t() {
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
   
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Projects</a></li>
+        <li><a href="work.html">Work</a></li>
+        <li><a href="code.html">Code</a></li>
         <li><a href="#">Thoughts</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
@@ -361,12 +361,11 @@ function t() {
   </header>
   <section class="terminal">
     <div id="console"></div> 
-    <h1><a href="index.html#highlights">go to highlights</a></h1>
   </section>
 </div>
 </div>
 
-<div class="panel2">
+<!--<div class="panel2">
 <div class="highlights">
 <h1 id="highlights">
 <span class="glyphicon glyphicon-menu-left" style="color:#092930;"></span><a id="highlights">Highlights</a><span class="glyphicon glyphicon-menu-right" style="color:#092930;"></span></h1>
@@ -450,9 +449,9 @@ function t() {
   </div>
 </div>
 <h3 id="sub_heading"><img src="img/arrow.png">Read the rest of my Thoughts</h3>
-</div>
+</div>-->
 
-<footer>
+<!--<footer>
   <div>
   <h3 id="thank_you"> Thanks for stopping by!</h3>
   <div class="icons">
@@ -464,7 +463,7 @@ function t() {
   </div>
   </div>
 </footer>
-</div>
+</div> -->
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
