--- a/work.html
+++ b/work.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
@@ -81,7 +82,7 @@ header {
 header h1 {
   color: #303e49;
   font-weight: bold;
-  font-size: 80px; 
+  font-size: 6em; 
 }
 @media only screen and (min-width: 1170px) {
   header {
@@ -274,8 +275,7 @@ header h1 {
   font-weight: bold;
 }
 .cd-timeline-content p, .cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
-  font-size: 13px;
-  font-size: 0.8125rem;
+  font-size: 1.5em;
 }
 .cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
   display: inline-block;
@@ -313,15 +313,14 @@ header h1 {
 }
 @media only screen and (min-width: 768px) {
   .cd-timeline-content h2 {
-    font-size: 20px;
-    font-size: 1.25rem;
+    font-size: 2.25em;
+    
   }
   .cd-timeline-content p {
-    font-size: 16px;
-    font-size: 1rem;
+    font-size: 1.5em;
   }
   .cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
-    font-size: 14px;
+    font-size: 1.5em;
     font-size: 0.875rem;
   }
 }
@@ -340,8 +339,7 @@ header h1 {
     width: 100%;
     left: 122%;*/
     top: 6px;
-    font-size: 16px;
-    font-size: 1rem;
+    font-size: 1.5em;
   }
   .cd-timeline-block:nth-child() .cd-timeline-content {
    /* float: right;*/
@@ -516,12 +514,37 @@ footer {
 	</style>
 </head>
 <body>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Ruth Dolly</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="work.html">Work</a></li>
+        <li><a href="code.html">Code</a></li>
+        <li><a href="#">Thoughts</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 	<header>
     <h1>
     <span id="a">{</span> Work <span id="a">}</span>
     </h1>
     <!--<hr id = "line">-->
   </header>
+
 	<section id="cd-timeline" class="cd-container">
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
