--- a/work.html
+++ b/work.html
@@ -548,7 +548,7 @@ footer {
 	<section id="cd-timeline" class="cd-container">
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="https://gnip.com/images/icon-twitter.png" alt="Picture">
+				<img src="img/twitter.png">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -562,7 +562,7 @@ footer {
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
-				<img src="https://gnip.com/images/icon-twitter.png" alt="Movie">
+				<img src="img/twitter.png">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -576,7 +576,7 @@ footer {
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="https://gnip.com/images/icon-twitter.png" alt="Picture">
+				<img src="img/twitter.png">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -589,7 +589,7 @@ footer {
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-location">
-				<img src="https://gnip.com/images/icon-twitter.png" alt="Location">
+				<img src="img/twitter.png">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -603,7 +603,7 @@ footer {
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-location">
-				<img src="https://gnip.com/images/icon-twitter.png" alt="Location">
+				<img src="img/twitter.png">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
