--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ THE SOFTWARE.
 <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 p, h1, h2, h3, h4, h5{
-  font-family: Lato;
+  font-family: Menlo, Monaco, "Consolas", "Courier New", "Courier";
   color: #092930;
 }
 
@@ -46,14 +46,15 @@ h1{
     background-color: #5BBCC9;
     border-color: #5BBCC9;
     padding-bottom: 50px;
+    padding-top: 15px;
 }
 .navbar-default .navbar-nav>li>a {
   color: white;
-  font-size: 150%;
+  font-size: 125%;
 }
 .navbar-default .navbar-brand {
     color: white;
-    font-size: 150%;
+    font-size: 125%;
 }
 
 .main{
@@ -64,7 +65,7 @@ h1{
 }
   body {
   backgrond-color: #2C3E50;
-  font-family: Lato;
+  font-family: Menlo, Monaco, "Consolas", "Courier New", "Courier";
 }
 body p{
   font-weight: 200;
