--- a/code.html
+++ b/code.html
@@ -17,17 +17,19 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
+    <div class="button green"></div>
+    <div class="button yellow"></div>
+    <div class="button red"></div>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Ruth Dolly</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
